# physics-toy

./: CMakeLists.txt
include/: camera.h  consts.h  cube.h  game_object.h  plane.h  scene.h  shader.h  texture_manager.h  utils.h
include/cyclone/: particle.h  pfgen.h
include/demos/: simple_scene.h
scenes/: Simple Scene.txt
shaders/: cube.frag  cube.vert  cube_texture.frag  cube_texture.vert
src/: camera.cpp  cube.cpp  game_object.cpp  main.cpp  plane.cpp  scene.cpp  shader.cpp  texture_manager.cpp  utils.cpp
src/cyclone/: particle.cpp  pfgen.cpp
src/demos/: simple_scene.cpp
